stderr
HikerTest.java:16: error: no suitable method found for assertFalse(no arguments)
            assertFalse();
            ^
    method Assertions.assertFalse(BooleanSupplier,Supplier<String>) is not applicable
      (actual and formal argument lists differ in length)
    method Assertions.assertFalse(BooleanSupplier,String) is not applicable
      (actual and formal argument lists differ in length)
    method Assertions.assertFalse(BooleanSupplier) is not applicable
      (actual and formal argument lists differ in length)
    method Assertions.assertFalse(boolean,Supplier<String>) is not applicable
      (actual and formal argument lists differ in length)
    method Assertions.assertFalse(boolean,String) is not applicable
      (actual and formal argument lists differ in length)
    method Assertions.assertFalse(boolean) is not applicable
      (actual and formal argument lists differ in length)
1 error
